--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <img src="./images/logo.svg" alt="Logo" class="navbar-brand" />
+                <a href="./index.html" class="logo__link"><img src="./images/logo.svg" alt="Logo"
+                        class="navbar-brand" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -76,7 +78,7 @@
                             <h3>Wheat</h3>
                         </div>
                     </div>
-                    <div class="cultures__item col-xl-1 col-md-4 col-6">
+                    <div class="cultures__item col-xl-2 col-md-4 col-6">
                         <div class="icon-box">
                             <svg width="49" height="50" viewBox="0 0 49 50" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -134,7 +136,7 @@
                             <h3>Clover</h3>
                         </div>
                     </div>
-                    <div class="cultures__item col-xl-1 col-md-4 col-6">
+                    <div class="cultures__item col-xl-2 col-md-4 col-6">
                         <div class="icon-box">
                             <svg width="42" height="54" viewBox="0 0 42 54" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -161,7 +163,7 @@
                             <h3>Tomato</h3>
                         </div>
                     </div>
-                    <div class="cultures__item col-xl-1 col-md-4 col-6">
+                    <div class="cultures__item col-xl-2 col-md-4 col-6">
                         <div class="icon-box">
                             <svg width="59" height="53" viewBox="0 0 59 53" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -208,7 +210,7 @@
                             <h3>Eggplant P/O</h3>
                         </div>
                     </div>
-                    <div class="cultures__item col-xl-1 col-md-4 col-6">
+                    <div class="cultures__item col-xl-2 col-md-4 col-6">
                         <div class="icon-box">
                             <svg width="58" height="59" viewBox="0 0 58 59" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
