--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/header.css" /> -->
 </head>
 
 <body>
-    <header id="header">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <a href="./index.html" class="logo__link"><img src="./images/logo.svg" alt="Logo"
@@ -35,7 +36,7 @@
                             <a href="#" class="nav-link">Company Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Products</a>
+                            <a href="./products.html" class="nav-link">Products</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Services</a>
@@ -66,7 +67,7 @@
     <main id="main">
         <section class="cultures">
             <div class="cultures__container text-center">
-                <div class="container__items row justify-content-space-between">
+                <div class="cultures__items row justify-content-space-between">
                     <div class="cultures__item col-xl-1 col-md-4 col-6">
                         <div class="icon-box">
                             <svg width="22" height="53" viewBox="0 0 22 53" fill="none"
