--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Products</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;700&display=swap" rel="stylesheet" />
@@ -134,7 +134,7 @@
                         <p>Agridera operates through international and local distributers around the world.</p>
                     </div>
                     <div class="block-3__cards">
-                        <a href="#" class="card__link link-1">
+                        <a href="./tomato.html" class="card__link link-1">
                             <div class="block-3__card card-1">
                                 <img src="./images/tomato__card-1.png" alt="tomato-1" class="card__thumb">
                                 <div class="card__text">
@@ -143,7 +143,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-2">
+                        <a href="./tomato.html" class="card__link link-2">
                             <div class="block-3__card card-2">
                                 <img src="./images/tomato__card-2.png" alt="tomato-2" class="card__thumb">
                                 <div class="card__text">
@@ -152,7 +152,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-3">
+                        <a href="./tomato.html" class="card__link link-3">
                             <div class="block-3__card card-3">
                                 <img src="./images/tomato__card-3.png" alt="tomato-3" class="card__thumb">
                                 <div class="card__text">
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-4">
+                        <a href="./tomato.html" class="card__link link-4">
                             <div class="block-3__card card-4">
                                 <img src="./images/tomato__card-4.png" alt="tomato-4" class="card__thumb">
                                 <div class="card__text">
@@ -170,7 +170,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-5">
+                        <a href="./tomato.html" class="card__link link-5">
                             <div class="block-3__card card-5">
                                 <img src="./images/tomato__card-5.png" alt="tomato-5" class="card__thumb">
                                 <div class="card__text">
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-6">
+                        <a href="./tomato.html" class="card__link link-6">
                             <div class="block-3__card card-6">
                                 <img src="./images/tomato__card-6.png" alt="tomato-6" class="card__thumb">
                                 <div class="card__text">
@@ -188,7 +188,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-7">
+                        <a href="./tomato.html" class="card__link link-7">
                             <div class="block-3__card card-7">
                                 <img src="./images/tomato__card-7.png" alt="tomato-7" class="card__thumb">
                                 <div class="card__text">
@@ -197,7 +197,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="#" class="card__link link-8">
+                        <a href="./tomato.html" class="card__link link-8">
                             <div class="block-3__card card-8">
                                 <img src="./images/tomato__card-8.png" alt="tomato-8" class="card__thumb">
                                 <div class="card__text">
