--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="navContent">
                     <ul class="navbar-nav mr-auto mb-3 mb-lg-0">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Home</a>
+                            <a href="./index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Company Profile</a>
@@ -45,7 +45,7 @@
                             <a href="#" class="nav-link">R & D</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="./contacts.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
