--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
                             <a href="#" class="nav-link">R & D</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="./contacts.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="wrapper__block-3 block-3">
+                <div class="wrapper__block-3 block-3" id="sorts">
                     <div class="vline-par par-2">
                         <hr id="vline">
                         <p>Agridera operates through international and local distributers around the world.</p>
