--- a/tomato.html
+++ b/tomato.html
@@ -45,7 +45,7 @@
                             <a href="#" class="nav-link">R & D</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="./contacts.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                     <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
