--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
                     <ul>
                         <li class="footer-navbar__item"><a href="#!" class="footer__link">PROFILE</a></li>
                         <li class="footer-navbar__item"><a href="#!" class="footer__link">MANAGEMENT</a></li>
-                        <li class="footer-navbar__item"><a href="#!" class="footer__link">PRODUCTS</a></li>
+                        <li class="footer-navbar__item"><a href="./products.html" class="footer__link">PRODUCTS</a></li>
                         <li class="footer-navbar__item"><a href="#!" class="footer__link">R&D</a></li>
                         <li class="footer-navbar__item"><a href="#!" class="footer__link">LINKS</a></li>
                         <li class="footer-navbar__item"><a href="#!" class="footer__link">SITEMAP</a></li>
-                        <li class="footer-navbar__item"><a href="#!" class="footer__link">CONTACT</a></li>
+                        <li class="footer-navbar__item"><a href="./contacts.html" class="footer__link">CONTACT</a></li>
                     </ul>
                 </div>
                 <div class="footer__social">
