--- a/lemon.html
+++ b/lemon.html
@@ -134,7 +134,8 @@
                         <p>Agridera operates through international and local distributers around the world.</p>
                     </div>
                     <div class="block-3__cards" id="app">
-                        <a href="#" v-if="products" v-for="p in products" class="card__link" :class="'link-'+p.id">
+                        <a :href="'./lemon_one.html#'+p.id" v-if="products" v-for="p in products" class="card__link"
+                            :class="'link-'+p.id">
                             <div class="block-3__card" :class="'card-'+p.id">
                                 <img :src="'./img/'+p.image" alt="" class="card__thumb">
                                 <div class="card__text">
@@ -143,69 +144,6 @@
                                 </div>
                             </div>
                         </a>
-                        <!-- <a href="#" class="card__link link-2">
-                            <div class="block-3__card card-2">
-                                <img src="./img/lemon__card-2.png" alt="lemon-2" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1001 (TAG 855)</h2>
-                                    <h3>Lemon Determinate Yellow Standard Round</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-3">
-                            <div class="block-3__card card-3">
-                                <img src="./img/lemon__card-3.png" alt="lemon-3" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1002 (TAG 809)</h2>
-                                    <h3>Lemon Determinate Yellow Standard Round</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-4">
-                            <div class="block-3__card card-4">
-                                <img src="./img/" alt="lemon-4" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1003 (TAG 834)</h2>
-                                    <h3>Lemon Determinate Yellow Standard Round</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-5">
-                            <div class="block-3__card card-5">
-                                <img src="./img/lemon__card-5.png" alt="lemon-5" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1004 (TAG 848)</h2>
-                                    <h3>Lemon Determinate Yellow BEEF Round</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-6">
-                            <div class="block-3__card card-6">
-                                <img src="./images/lemon__card-6.png" alt="lemon-6" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1005 (TAG 800)</h2>
-                                    <h3>Lemon Determinate Yellow Standard Round</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-7">
-                            <div class="block-3__card card-7">
-                                <img src="./images/lemon__card-7.png" alt="lemon-7" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1006 (TAG 898)</h2>
-                                    <h3>Lemon Determinate Yellow Elongated</h3>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#" class="card__link link-8">
-                            <div class="block-3__card card-8">
-                                <img src="./images/lemon__card-8.png" alt="lemon-8" class="card__thumb">
-                                <div class="card__text">
-                                    <h2>TAG 1007 (TAG 816)</h2>
-                                    <h3>Lemon Determinate Yellow Elongated</h3>
-                                </div>
-                            </div>
-                        </a> -->
                     </div>
                 </div>
             </div>
