--- a/lemon.html
+++ b/lemon.html
@@ -36,7 +36,7 @@
                             <a href="#" class="nav-link">Company Profile</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./products.html" class="nav-link">Products</a>
+                            <a href="./lemon.html" class="nav-link">Products</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Services</a>
